added simple tab demo as a practice prototype

--- a/src/patterns/00-base/main.scss
+++ b/src/patterns/00-base/main.scss
@@ -3,6 +3,7 @@
  */
 @import 'base';
 @import 'layout';
+@import 'theme';
 @import '../01-atoms/atoms';
 @import '../02-molecules/molecules';
 @import '../03-organisms/organisms';
