added styling to tab content, copied countup script and fixed responsive layout issues

--- a/src/patterns/00-base/_mixins.scss
+++ b/src/patterns/00-base/_mixins.scss
@@ -1,6 +1,6 @@
 /* gradient
 -------------------------------------------------------------- */
-@mixin gradient ($origin: left, $start: #ffffff, $stop: #000000) {
+@mixin gradient ($origin: to right, $start: #ffffff, $stop: #000000) {
 	background-color: $start;
 	background: -webkit-linear-gradient($origin, $start, $stop);
 	background: -moz-linear-gradient($origin, $start, $stop);
