--- a/src/patterns/00-base/layout.scss
+++ b/src/patterns/00-base/layout.scss
@@ -32,7 +32,7 @@ body {
 	}
 	.page--marginal {
 		/* 12em is the width of the columns */
-		flex: 0 0 12em;
+		flex: 0 0 15rem;
 	}
 }
 
@@ -43,6 +43,6 @@ body {
 	}
 	.page--marginal {
 		/* 12em is the width of the columns */
-		flex: 0 0 24em;
+		flex: 0 0 24rem;
 	}
 }
