--- a/src/patterns/00-base/theme.scss
+++ b/src/patterns/00-base/theme.scss
@@ -1,6 +1,6 @@
 
 body {
-	color: $basicFontColor;
+	color: $fontColorBasic;
 	font-family: HelveticaNeue, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 }
@@ -13,6 +13,19 @@ body {
 	background: $white;
 }
 .page--marginal {
+	h3 {
+		color: $white;
+		font-size: 2rem;
+		line-height: 2.4rem;
+
+		sup {
+			font-size: 0.8rem;
+			line-height: 2.4rem;
+			vertical-align: bottom;
+			font-weight: normal;
+			text-transform: uppercase;
+		}
+	}
 }
 
 
