--- a/src/patterns/03-organisms/demo-tabs/demo-tabs.scss
+++ b/src/patterns/03-organisms/demo-tabs/demo-tabs.scss
@@ -31,11 +31,18 @@
 		margin-left: 0;
 	}
 
+	cursor: pointer;
+
 	&.active {
 		background: $white;
-		@include gradient(top, $bgWhiteGradient, $white);
+		@include gradient(to bottom, $bgWhiteGradient, $white);
 		box-shadow: inset 0 1px 0 0 #fff;
-		color: $basicFontColor;
+		color: $fontColorBasic;
+		cursor: default;
+
+		.toggleTabs & {
+			cursor: pointer;
+		}
 	}
 }
 
@@ -58,7 +65,7 @@
 		bottom: 1px;
 		left: 0;
 		right: 0;
-		@include gradient(bottom, $bgWhiteGradient, $white);
+		@include gradient(to top, $bgWhiteGradient, $white);
 		height: 23px;
 	}
 }
@@ -78,3 +85,47 @@
 	}
 }
 
+
+
+.linklist {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+	> li {
+		margin: 0;
+		padding: 0;
+		border-bottom: 1px solid $greyLight;
+
+		&:last-child {
+			border-bottom: none;
+		}
+	}
+
+	a {
+		padding: 20px 0;
+		display: block;
+		text-decoration: none;
+		color: $fontColorBasic;
+
+		&:hover {
+			color: $fontColorLinks;
+
+			.label {
+				text-decoration: underline;
+			}
+		}
+	}
+}
+
+.counter {
+	white-space: nowrap;
+	color: $fontColorLight;
+	margin-left: 10px;
+
+	@media all and (max-width: 1023.999px) {
+		span {
+			display: none;
+		}
+	}
+}
