refactored list types (both template and styling), added the media item type and sitemap to the demo content, fixed typos

--- a/src/patterns/03-organisms/demo-tabs/demo-tabs.scss
+++ b/src/patterns/03-organisms/demo-tabs/demo-tabs.scss
@@ -85,16 +85,19 @@
 	}
 }
 
-
-
-.linklist {
+.unList {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-
 	> li {
 		margin: 0;
 		padding: 0;
+	}
+}
+
+.linklist {
+
+	> li {
 		border-bottom: 1px solid $greyLight;
 
 		&:last-child {
@@ -105,16 +108,21 @@
 	a {
 		padding: 20px 0;
 		display: block;
-		text-decoration: none;
-		color: $fontColorBasic;
 
 		&:hover {
-			color: $fontColorLinks;
-
 			.label {
 				text-decoration: underline;
 			}
 		}
+	}
+}
+
+a {
+	text-decoration: none;
+	color: $fontColorBasic;
+
+	&:hover {
+		color: $fontColorLinks;
 	}
 }
 
