--- a/src/patterns/03-organisms/demo-tabs/demo-tabs.scss
+++ b/src/patterns/03-organisms/demo-tabs/demo-tabs.scss
@@ -96,7 +96,6 @@
 }
 
 .linklist {
-
 	> li {
 		border-bottom: 1px solid $greyLight;
 
@@ -104,7 +103,6 @@
 			border-bottom: none;
 		}
 	}
-
 	a {
 		padding: 20px 0;
 		display: block;
@@ -116,6 +114,17 @@
 		}
 	}
 }
+
+.mediaList {
+	.img {
+		width: 60px;
+		height: 90px;
+		background: $primaryColor;
+		box-shadow: inset 0 0 1px 0 rgba(40, 40, 40, 0.75);
+	}
+}
+
+
 
 a {
 	text-decoration: none;
